Athn file changes