@@ -17,6 +17,7 @@
 package edu.mit.kc.auth;
 
 import java.io.IOException;
+import java.net.URLEncoder;
 
 import javax.servlet.Filter;
 import javax.servlet.FilterChain;
@@ -26,13 +27,20 @@ import javax.servlet.ServletRequest;
 import javax.servlet.ServletResponse;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletRequestWrapper;
+import javax.servlet.http.HttpServletResponse;
 
+import org.apache.commons.lang.StringUtils;
 import org.kuali.coeus.sys.framework.service.KcServiceLocator;
+import org.kuali.rice.core.api.config.property.ConfigContext;
 import org.kuali.rice.kim.api.identity.IdentityService;
+import org.kuali.rice.kim.api.identity.principal.Principal;
 import org.kuali.rice.kim.api.identity.principal.PrincipalContract;
 import org.kuali.rice.kim.api.services.KimApiServiceLocator;
 import org.kuali.rice.krad.UserSession;
+import org.kuali.rice.krad.exception.AuthenticationException;
 import org.kuali.rice.krad.util.KRADConstants;
+import org.kuali.rice.krad.util.KRADUtils;
+import org.kuali.rice.krad.web.filter.DummyLoginFilter;
 
 import edu.mit.kc.auth.MitKcAuthService;
 
@@ -45,66 +53,193 @@ public class MitKcUserLoginFilter implements Filter {
     private String loginPath;
     private boolean showPassword = true;
 
-    public void init(FilterConfig config) throws ServletException {
-        loginPath = config.getInitParameter("loginPath");
-        // showPassword = new Boolean(config.getInitParameter("showPassword"));
+    @Override
+	public void init(FilterConfig config) throws ServletException {
+        loginPath = ConfigContext.getCurrentContextConfig().getProperty("loginPath");
+        showPassword = Boolean.valueOf(ConfigContext.getCurrentContextConfig().getProperty("showPassword")).booleanValue();
+
         if (loginPath == null) {
-            loginPath = "/WEB-INF/jsp/dummy_login.jsp";
+            loginPath = "/kr-login/login?viewId=DummyLoginView";
         }
     }
 
-    public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException {
-        if (request instanceof HttpServletRequest) {
-            HttpServletRequest hsreq = (HttpServletRequest) request;
-            UserSession session = null;
-            if (hsreq.getSession().getAttribute(KRADConstants.USER_SESSION_KEY) != null) {
-                session = (UserSession) hsreq.getSession().getAttribute(KRADConstants.USER_SESSION_KEY);
-            }
-            if (session == null) {
-                IdentityService auth = KimApiServiceLocator.getIdentityService();
-                MitKcAuthService mitKcAuthService = KcServiceLocator.getService(MitKcAuthService.class);
-                request.setAttribute("showPasswordField", showPassword);
-                final String user = request.getParameter("__login_user");
-                final String password = request.getParameter("__login_pw");
-                if (user != null) {
-                    // Very simple password checking. Nothing hashed or encrypted. This is strictly for demonstration purposes only.
-                    final PrincipalContract principal = showPassword ? mitKcAuthService.authenticate(user,password) : 
-                            auth.getPrincipalByPrincipalName(user);
-                    if (principal == null) {
-                        handleInvalidLogin(request, response);
-                        return;
-                    }else {
-                        // wrap the request with the remote user
-                        // UserLoginFilter and WebAuthenticationService will create the session
-                        request = new HttpServletRequestWrapper(hsreq) {
-                            public String getRemoteUser() {
-                                return user;
-                            }
-                        };
-                    }
+	@Override
+	public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException {
+		this.doFilter((HttpServletRequest) request, (HttpServletResponse) response, chain);
+	}
+
+	private void doFilter(HttpServletRequest request, HttpServletResponse response, FilterChain chain) throws IOException, ServletException {
+        final UserSession session = KRADUtils.getUserSessionFromRequest(request);
+
+        if (session == null) {
+            loginRequired(request, response, chain);
+
+            return;
+
+        } else {
+            // Perform request as signed in user
+            request = new HttpServletRequestWrapper(request) {
+                @Override
+                public String getRemoteUser() {
+                    return session.getPrincipalName();
                 }
-                else {
-                    // no session has been established and this is not a login form submission, so forward to login page
-                    request.getRequestDispatcher(loginPath).forward(request, response);
-                    return;
-                }
-            }
+            };
         }
         chain.doFilter(request, response);
     }
-    /**
-     * Handles and invalid login attempt.
-     *  
-     * @param request the incoming request
-     * @param response the outgoing response
-     * @throws ServletException if unable to handle the invalid login
-     * @throws IOException if unable to handle the invalid login
-     */
-    private void handleInvalidLogin(ServletRequest request, ServletResponse response) throws ServletException, IOException {
-        request.setAttribute("invalidAuth", Boolean.TRUE);
-        request.getRequestDispatcher(loginPath).forward(request, response);
+
+    private void loginRequired(HttpServletRequest request, HttpServletResponse response, FilterChain chain) throws IOException, ServletException {
+        if (StringUtils.isNotBlank(request.getParameter("__login_user"))) {
+            performLoginAttempt(request, response);
+        } else {
+            // ignore ajax calls from login screen
+            if (StringUtils.equals(request.getPathInfo(),"/listener")) {
+               return;
+            }
+
+            // allow redirect and form submit from login screen
+            if (StringUtils.equals(request.getPathInfo(),"/login")) {
+                chain.doFilter(request, response);
+            } else {
+                // no session has been established and this is not a login form submission, so redirect to login page
+                response.sendRedirect(getLoginRedirectUrl(request));
+            }
+        }
     }
 
-    public void destroy() {
+    private void performLoginAttempt(HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException {
+        IdentityService auth = KimApiServiceLocator.getIdentityService();
+        MitKcAuthService mitKcAuthService = KcServiceLocator.getService(MitKcAuthService.class);
+        final String user = request.getParameter("__login_user");
+        String password = request.getParameter("__login_pw");
+
+        // if passwords are used, they cannot be blank
+        if (showPassword && StringUtils.isBlank(password)) {
+            handleInvalidLogin(request, response);
+            return;
+        }
+
+        // Very simple password checking. Nothing hashed or encrypted. This is strictly for demonstration purposes only.
+        //    password must have non null value on krim_prncpl_t record
+        //Principal principal = showPassword ? auth.getPrincipalByPrincipalNameAndPassword(user, password) : auth.getPrincipalByPrincipalName(user);
+        final PrincipalContract principal = showPassword ? mitKcAuthService.authenticate(user,password) : 
+            													auth.getPrincipalByPrincipalName(user);
+        if (principal == null) {
+            handleInvalidLogin(request, response);
+            return;
+        }
+
+        UserSession userSession = new UserSession(user);
+
+        // Test if session was successfully build for this user
+        if ( userSession.getPerson() == null ) {
+            throw new AuthenticationException("Invalid User: " + user  );
+        }
+
+        request.getSession().setAttribute(KRADConstants.USER_SESSION_KEY, userSession);
+
+        // wrap the request with the signed in user
+        // UserLoginFilter and WebAuthenticationService will build the session
+        request = new HttpServletRequestWrapper(request) {
+            @Override
+            public String getRemoteUser() {
+                return user;
+            }
+        };
+
+        StringBuilder redirectUrl = new StringBuilder(ConfigContext.getCurrentContextConfig().getProperty(KRADConstants.APPLICATION_URL_KEY));
+        redirectUrl.append(findTargetUrl(request));
+        response.sendRedirect(redirectUrl.toString());
     }
+
+    /**
+     * Handles and invalid login attempt.
+     *
+     * Sets error message and redirects to login screen
+     *
+     * @param request the incoming request
+     * @param response the outgoing response
+     * @throws javax.servlet.ServletException if unable to handle the invalid login
+     * @throws java.io.IOException if unable to handle the invalid login
+     */
+	private void handleInvalidLogin(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+        StringBuilder redirectUrl = new StringBuilder(getLoginRedirectUrl(request));
+        redirectUrl.append("&login_message=Invalid Login");
+        response.sendRedirect(redirectUrl.toString());
+    }
+
+    @Override
+	public void destroy() {
+    	loginPath = null;
+    }
+
+    /**
+     * Construct Url to login screen with original target Url in returnLocation property
+     *
+     * @param request
+     * @return Url string
+     * @throws IOException
+     */
+    private String getLoginRedirectUrl(HttpServletRequest request) throws IOException {
+        String targetUrl = findTargetUrl(request);
+
+        StringBuilder redirectUrl = new StringBuilder(ConfigContext.getCurrentContextConfig().getProperty(KRADConstants.APPLICATION_URL_KEY));
+        redirectUrl.append(loginPath);
+        redirectUrl.append("&returnLocation=");
+        redirectUrl.append(URLEncoder.encode(targetUrl,"UTF-8"));
+
+        return redirectUrl.toString();
+    }
+
+    /**
+     * Construct a url from a HttpServletRequest with login properties removed
+     *
+     * @param request
+     * @return Url string
+     */
+    private String findTargetUrl(HttpServletRequest request) {
+        StringBuilder targetUrl = new StringBuilder();
+        targetUrl.append(request.getServletPath());
+
+        if (StringUtils.isNotBlank(request.getPathInfo())) {
+            targetUrl.append(request.getPathInfo());
+        }
+
+        // clean login params from query string
+        if (StringUtils.isNotBlank(request.getQueryString())) {
+            targetUrl.append("?");
+
+            for (String keyValuePair : request.getQueryString().split("&")) {
+                if (isValidProperty(keyValuePair)) targetUrl.append("&").append(keyValuePair);
+            }
+
+        }
+
+        // clean up delimiters and return url string
+        return targetUrl.toString().replace("&&","&").replace("?&","?");
+    }
+
+    /**
+     * Test if property is needed (ie: Not a login property)
+     *
+     * @param keyValuePair
+     * @return Boolean
+     */
+    private Boolean isValidProperty(String keyValuePair) {
+        int eq = keyValuePair.indexOf("=");
+
+        if (eq < 0) {
+            // key with no value
+            return Boolean.FALSE;
+        }
+
+        String key = keyValuePair.substring(0, eq);
+        if (!key.equals("__login_pw")
+                && !key.equals("__login_user")
+                && !key.equals("login_message")) {
+            return Boolean.TRUE;
+        }
+
+        return Boolean.FALSE;
+    }    
 }
